--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,6 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+/dept_spreadsheet_v4_2013_MacrosSelfPopulating.xlsm
+/PHY1004W_2013_WebAppUpload.xlsm
+/PHY1032S_2013_WebAppUpload.xlsm
