updated jquery and highcharts

--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,6 @@ $RECYCLE.BIN/
 /dept_spreadsheet_v4_2013_MacrosSelfPopulating.xlsm
 /PHY1004W_2013_WebAppUpload.xlsm
 /PHY1032S_2013_WebAppUpload.xlsm
+vba.txt
+webapp_june15.zip
+/WebMarks/secrets.json
