--- a/WebMarks/package.json
+++ b/WebMarks/package.json
@@ -7,6 +7,7 @@
     "express": "^4.12.4",
     "jade": "^1.11.0",
     "mysql": "^2.7.0",
-    "stylus": "^0.51.1"
+    "stylus": "^0.51.1",
+    "serve-favicon":  "*"
   }
 }
